--- a/source/index.haml
+++ b/source/index.haml
@@ -30,7 +30,8 @@
         %h1
           Timesheet<span>.js</span>
         %p Visualize your data and events with sexy <span>HTML5</span> and <span>CSS3</span>. Create simple time sheets with sneaky JavaScript. Style them with CSS and have mobile fun as well …
-        #timesheet-default
+        .white
+          #timesheet-default
         %p Just include Timesheet.js and configure your data. No external dependencies, no jQuery needed and of course no Angular.JS! Just a few lines JavaScript to generate a beautiful HTML5 layout and some really delicious CSS to be customized by almighty you.
         %code
           %pre!='&lt;script src="/javascripts/timesheet.js" type="text/javascript" /&gt;'
