--- a/source/stylesheets/timesheet-white.scss
+++ b/source/stylesheets/timesheet-white.scss
@@ -5,7 +5,7 @@
     border-top: 1px solid rgba(60, 60, 60, 0.3);
     background-color: rgba(251, 251, 251, 1);
     .bubble {
-      background-color: #11354d;
+      background-color: #1c567d;
     }
     // &.color-scheme-default {
     //   .bubble-default {
