--- a/source/stylesheets/timesheet.scss
+++ b/source/stylesheets/timesheet.scss
@@ -54,6 +54,10 @@
       font-weight: lighter;
       border-left: 1px dashed rgba(250, 250, 250, 0.2);
       height: 100%;
+
+      &.month {
+        width: 4vw;
+      }
     }
   }
   
